Closed Bug 56240 Opened 25 years ago Closed 24 years ago

onMouseDown state gets stuck down with popup/app switch

Categories

(Core :: DOM: UI Events & Focus Handling, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla0.9.9

People

(Reporter: jruderman, Assigned: joki)

References

Details

Attachments

(2 files)

After cancelling an alert from an onmousedown event, moving the mouse selects text even though I'm no longer holding the mouse button down. This happens whether I cancel the alert by clicking "ok" or by pressing enter/esc.
Attached file testcase
Event problem, reassigning to Tom.
Assignee: jst → joki
Hmmm...I think this is a different incarnation of a larger issue. If you hover the mouse over a button that has an onMouseDown event (after dismissing the alert box) the button is depressed. Until focus shifts elsewhere. Changing Summary, Plat/OS to ALL, and taking ownership of the bug under Event Handling. desale, you are free to go:). Previous Summary: After cancelling onmousedown alert, moving the mouse selects text
Component: DOM Level 0 → Event Handling
OS: Windows 98 → All
QA Contact: desale → lorca
Hardware: PC → All
Summary: After cancelling onmousedown alert, moving the mouse selects text → onMouseDown not releasing mouse click
This bug can also be triggered by click-dragging out of the content area, alt- tabbing to another app, and then alt-tabbing back. (That happens for selectable text and html3/html4 buttons.) There are already several bugs involving alt-tab and mouse events: bug 33144 toolbar buttons stay depressed after click-drag, alt-tab Note: you don't have to drag out of anything to trigger 33144, contrary to the summary. Click-hold works fine. bug 35191 alt-tab, mouseup on other app while scrolling -> scrollbar grabs mouse focus I wonder if some of these bugs are duplicates.
I think this is a dupe of some others. Its a basic issue that we need to synthesize a mousedown in a bunch of cases where we didn't get one.
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9
Summary: onMouseDown not releasing mouse click → onMouseDown state gets stuck down with popup/app switch
*** Bug 65344 has been marked as a duplicate of this bug. ***
Reassigning QA Contact for all open and unverified bugs previously under Lorca's care to Gerardo as per phone conversation this morning.
QA Contact: lorca → gerardok
Blocks: 67277
This fix seems like it might have some unintended consequences. I'm gonna push it out to 0.9.1 rather than shove it into 0.9 tonight.
Target Milestone: mozilla0.9 → mozilla0.9.1
Moving out one milestone. Joki has too many bugs.
Target Milestone: mozilla0.9.1 → mozilla0.9.2
Priority: P3 → P2
QA contact updated
QA Contact: gerardok → madhur
Moving lower priority bugs out of .9.2 milestone.
Target Milestone: mozilla0.9.2 → mozilla0.9.3
Doesn't look like this is getting fixed before the freeze tomorrow night. Pushing out a milestone. Please correct if I'm mistaken.
Target Milestone: mozilla0.9.3 → mozilla0.9.4
->0.9.5
Target Milestone: mozilla0.9.4 → mozilla0.9.5
Moving to 0.9.6
Target Milestone: mozilla0.9.5 → mozilla0.9.6
*** Bug 102421 has been marked as a duplicate of this bug. ***
0.9.6 has passed, moving to 0.9.7. Load balancing 0.9.7 list shortly
Target Milestone: mozilla0.9.6 → mozilla0.9.7
Moving bugs from 0.9.7 for triaging in 0.9.8
Target Milestone: mozilla0.9.7 → mozilla0.9.8
Target Milestone: mozilla0.9.8 → mozilla0.9.9
*** Bug 120289 has been marked as a duplicate of this bug. ***
*** Bug 102718 has been marked as a duplicate of this bug. ***
Blocks: 124140
nsbeta1+ per ADT triage
Keywords: nsbeta1+
This bug has a lot of incarnations since many of the problems areas track their own state (selection state, button state, mouse capture, scroll state, etc). I have a fix for the test cases on this bug which I going foward with. It fixes selection state adn mouse capture state. It still leaves 35191, the scrolling issue and 33144, the button issue.
Attached patch proposed patchSplinter Review
Comment on attachment 70449 [details] [diff] [review] proposed patch As long as you've tested drag and drop and it works okay, r=saari
Attachment #70449 - Flags: review+
Comment on attachment 70449 [details] [diff] [review] proposed patch sr=jst
Attachment #70449 - Flags: superreview+
Fix checked in to cover selection defects and mouse capture defects (see dupe bug 102421). A number of the dupes of this bug cover scrollbar defects which is also covered in bug 35191. Since the internal issues, though similar, must be fixed in a number of locations I'm going to continue to track this as separate bugs and fix them individually. So for verification purposes, this fix does NOT cover the scrollbar-based dupes listed on it. Other issues listed within should, however, be fixed and can be verified.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
This fix broke selection on SOME pages for OS/2 and I have no idea why. We just discovered the regression. An example page would be: http://en.ecomstation.ru/ If I comment out the mNormalLMouseEventInProcess = PR_TRUE; in nsEventManager.cpp - NS_MOUSE_LEFT_BUTTON_DOWN, everything works as expected. Does anyone have any ideas? Thanks
QA Contact: madhur → rakeshmishra
I couldn't find a new bug about the 0S/2 selection problem so I opened a new one, 138265.
Verified on the trunk build 2002-04-24-06-trunk on Windows 2000 .
Status: RESOLVED → VERIFIED
bug 144954 was just filed with 2002050521, linux. Is this one really fixed?
Re Comment #29: The fix does not cover all cases, in particular not the scrolling/popup, see Comment #25.
*** Bug 180359 has been marked as a duplicate of this bug. ***
*** Bug 210333 has been marked as a duplicate of this bug. ***
Component: Event Handling → User events and focus handling
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: