Fix for bug 56240, reset selection and mouse capture states when mousedown/mouseup sequence processes abnormally. r:saari, sr:jst