content/events/public/nsIEventStateManager.h
@@ -91,6 +91,7 @@ public:
   NS_IMETHOD SetFocusedContent(nsIContent* aContent) = 0;
 
   NS_IMETHOD ContentRemoved(nsIContent* aContent) = 0;
+  NS_IMETHOD EventStatusOK(nsGUIEvent* aEvent, PRBool *aOK) = 0;
 
   NS_IMETHOD GetNextTabbableContent(nsIContent* aRootContent, nsIFrame* aFrame,
                                     PRBool forward, nsIContent** aResult) = 0;
